@@ -9,6 +9,8 @@ requires "Ref::Util" => "0";
 requires "Scalar::Util" => "0";
 requires "Sub::Quote" => "0";
 requires "Sub::Util" => "1.40";
+requires "Types::Common::Numeric" => "0";
+requires "Types::Common::String" => "0";
 requires "Types::Standard" => "0";
 requires "namespace::autoclean" => "0";
 requires "perl" => "v5.10.0";
